fix warnings
git-svn-id: http://code.jaspersoft.com/svn/repos/jasperreports/trunk@3657 76e25fc1-081a-0410-bb1b-c96bc70638b7